# Renzzle_FE

./: .eslintrc.js  .gitignore  .prettierrc.js  App.tsx  app.json  babel.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: ♻️-refactor.md  ✨-feature.md  🐞-bug.md
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/java/com/renzzle_fe/cpp/: CMakeLists.txt
android/app/src/main/java/com/renzzle_fe/cpp/engine/: engine.h
android/app/src/main/java/com/renzzle_fe/cpp/evaluate/: CMakeLists.txt  evaluator.cpp  evaluator.h  value.h
android/app/src/main/java/com/renzzle_fe/cpp/game/: CMakeLists.txt  board.cpp  board.h  cell.cpp  cell.h  fixed_move_list.h  line.cpp  line.h  move_bucket.h  pos.cpp  pos.h  types.cpp  types.h  zobrist.cpp  zobrist.h
android/app/src/main/java/com/renzzle_fe/cpp/generator/: CMakeLists.txt  puzzle_generator.cpp  puzzle_generator.h
android/app/src/main/java/com/renzzle_fe/cpp/jni/: RenzzleJNI.cpp  VCFSearchJNI.cpp
android/app/src/main/java/com/renzzle_fe/cpp/search/: CMakeLists.txt  VCF_search.cpp  VCF_search.h  search.cpp  search.h  search_monitor.cpp  search_monitor.h  search_win.cpp  search_win.h  transposition_table.h  vcf_candidate_finder.h
android/app/src/main/java/com/renzzle_fe/cpp/search/detail/: core.h  history.h  lifecycle.h  qvcf.h  runtime.h  tt.h
android/app/src/main/java/com/renzzle_fe/cpp/test/: CMakeLists.txt  profiler.h  test.cpp  test.h  util.cpp  util.h
android/app/src/main/java/com/renzzle_fe/cpp/tree/: CMakeLists.txt  tree.cpp  tree.h  tree_manager.cpp  tree_manager.h
ios/: Podfile  link-assets-manifest.json
ios/Renzzle_FE/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Renzzle_FE.xcodeproj/: project.pbxproj
ios/Renzzle_FE.xcodeproj/xcshareddata/xcschemes/: Renzzle_FE.xcscheme
ios/Renzzle_FE.xcworkspace/: contents.xcworkspacedata
ios/Renzzle_FETests/: Renzzle_FETests.m
src/apis/: auth.ts  community.ts  config.ts  content.ts  interceptor.ts  lesson.ts  rank.ts  training.ts  user.ts
src/assets/icons/: index.ts
src/components/common/: index.ts
src/components/common/AppWrapper/: index.styles.tsx  index.tsx
src/components/common/BottomButtonBar/: indes.styles.tsx  index.styles.tsx  index.tsx
src/components/common/Button/: index.styles.tsx  index.tsx
src/components/common/CustomButton/: index.tsx  (+1 more)
src/context/EmailAuthCodeContext/: index.tsx
src/hooks/useDeviceWidth/: index.ts
src/hooks/useInitializeApp/: index.ts
src/hooks/useLogin/: index.ts
src/hooks/useModal/: index.ts
src/hooks/useOptimisticCommunityUpdate/: index.ts
src/hooks/usePuzzleAd/: index.ts
src/locales/: en.json  i18n.ts  ko.json
src/screens/: README.md
src/screens/CommunityPuzzleSolve/: index.styles.tsx  index.tsx
src/screens/CommunityPuzzles/: index.styles.tsx  index.tsx
src/screens/CreateCommunityPuzzle/: index.styles.tsx  index.tsx
src/screens/DrawerNavigator/: index.tsx
src/screens/Home/: index.styles.tsx  index.tsx
src/screens/LessonChapterList/: index.styles.tsx  index.tsx
src/screens/LikedPuzzles/: index.tsx
src/screens/MyPuzzles/: index.styles.tsx  index.tsx
src/screens/PuzzleReview/: index.styles.tsx  index.tsx
src/screens/RankedPuzzleSolve/: index.styles.tsx  index.tsx
src/screens/Ranking/: index.styles.tsx  index.tsx
src/screens/Settings/: index.styles.tsx  index.tsx
src/screens/Signin/: index.styles.tsx  index.tsx
src/screens/Signup/: index.styles.tsx  index.tsx
src/screens/TrainingPacks/: index.styles.tsx  index.tsx
src/screens/TrainingPuzzleSolve/: index.styles.tsx  index.tsx
src/screens/TrainingPuzzles/: index.tsx
src/store/: useAuthStore.ts  useConfigStore.ts  useNetworkStore.ts  useUserStore.ts
src/styles/: README.md  theme.ts
src/types/: index.ts
src/types/MenuThemeMap/: index.ts
src/types/ParamList/: index.ts
src/types/Puzzle/: index.ts
src/types/Ranking/: index.ts
src/utils/: utils.ts  validators.ts
(+130 files in other folders)
